[package]
name = "cland-rust-share"
version = "0.1.0"
edition = "2024"
authors = ["Team Maintainers"]
publish = false
description = "Internal shared library for common functionality"
license-file = "LICENSE"

[dependencies]
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
regex = "1.0"

[dev-dependencies]
criterion = "0.5"
