[package]
name = "cland-rust-share"
version = "0.1.0"
edition = "2024"
authors = ["Team Maintainers"]
publish = false
description = "Internal shared library for common functionality"
license-file = "LICENSE"

[dependencies]
thiserror = "1.0"
sha2 = "0.10"
rand = "0.8"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5", optional = true, features = ["chrono"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
utoipa_support = ["dep:utoipa"]  # 启用该特性才会引入 Utoipa
